# code-review-arena

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bench  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
arena/: __init__.py
constraints/: minimum.txt
dashboard/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
docs/: DEMO.md  README.md  adding-new-cases.md  architecture.md  audit-pack-v1.md  audit-pack-v2.md  audit-report.md  benchmark-design.md  custom-command-reviewer.md  github-action.md  historical-fix-ingestion.md  metrics.md  patch-validation.md  reference-patches.md  reviewer-interface.md  roadmap.md  scoring.md  structural-validators.md  troubleshooting.md  trusted-evaluation-architecture.md  v2-architecture.md
examples/: README.md  sample_run.json
scripts/: build_bench_image.sh  fake_reviewer.py  generate_audit_cases.py  generate_reference_patches.py  generate_verification_snapshot.py
tests/: __init__.py  conftest.py  test_audit_report.py  test_audit_validators.py  test_bundle.py  test_byte_boundaries.py  test_case_loader.py  test_case_patch_selection.py  test_certify.py  test_cli_and_api.py  test_commands_and_budgets.py  test_custom_command_reviewer.py  test_deterministic_scoring.py  test_docker_execution.py  test_evidence_attribution.py  test_execution_security.py  test_git_pipeline.py  test_http_reviewer.py  test_import_fix.py  test_integrity.py  test_integrity_guards.py  test_jobs.py  test_metrics_and_contamination.py  test_multi_bug_scoring.py  test_mutation.py  test_pack_validation.py  test_path_security.py  (+19 more)
(+439 files in other folders)
