[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codereview-arena"
version = "0.1.0"
description = "Local, execution-backed benchmark harness for AI code reviewers (code-review-arena)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "CodeReview Arena contributors"}]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/harihkk/code-review-arena"
Repository = "https://github.com/harihkk/code-review-arena"
Documentation = "https://github.com/harihkk/code-review-arena#readme"
Issues = "https://github.com/harihkk/code-review-arena/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "types-PyYAML>=6.0",
]

[project.scripts]
arena = "arena.cli.main:app"

[tool.setuptools.packages.find]
include = ["arena*"]

[tool.setuptools.package-data]
arena = ["storage/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"arena/reviewers/controls.py" = ["E501"]
"arena/reports/audit_report.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
